fixed guilds showing behind userbuttons

--- a/trivia.css
+++ b/trivia.css
@@ -246,6 +246,10 @@ a.selected-aXhQR6 .layout-2DM8Md {
 .typing-2GQL18 .cooldownWrapper-3joyFc {
   margin: 0;
 }
+/*Server Bar*/
+.guilds-1SWlCJ {
+  margin-bottom: 180px;
+}
 /*Text Area*/
 .scrollableContainer-2NUZem {
   border-radius: 0px 10px 10px 0px;
